Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129299

[Widget] The view becomes black when docking back the window in Hellp GL2 example

XMLWordPrintable

    • 063783b14 (6.8.0), 0704eff56 (dev), 1befc288c (6.8)

      Windows 10 

      Qt Creator 14.0.1

      Device: Raspberry Pi4 64 bit with Qt 6.8.0 RC

      Steps to reproduce:

      1. Open example - https://doc.qt.io/qt-6/qtopengl-hellogl2-example.html
      2. Run the app on RPi device with '-platform wayland-egl / wayland' parameter
      3. Undock the windows
      4. Dock back the window

       

      Expected: The 'Q' character is still visible.

      Actual: The screen becomes black. Attached wayland_debug logs.

      Reproducibility:  100% 

       

        For Gerrit Dashboard: QTBUG-129299
        # Subject Branch Project Status CR V

            inho Inho Lee
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes