widgets: Send Window{AboutToChange}Internal when top level used RHI

When calling setParent for a top-level widget that used RHI it's
not enough to check if the widget's parent used RHI, as that's
always going to be false.

Missing this results in not sending textureChildren events for the
reparented widget.

Amends eb4cb719257d3b57cd801273d4011579d8c81714

Fixes: QTBUG-129299
Change-Id: I632d8d63ec56243cd6da2b196ad9651c28128f0b
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>